--- a/apis/templates/login.html
+++ b/apis/templates/login.html
@@ -1,13 +1,40 @@
 {% extends "_base.html" %}
+{% load static %}
+{% block header %}
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+{% endblock %}
 
 {% block contents %}
-<h1>로그인 페이지</h1>
-<h1> login </h1>
 {{ request.user }}
-    <input type="text", id="username">
-    <input type="password", id="password">
-    <button type="submit" id="login">login</button>
-    <button type="submit" id="logout">logout</button>
+
+<div id="login">
+    <div class="container">
+        <br>
+        <h3 class="text-center text-info">Login</h3>
+        <br>
+        <div class="form-group col-md-6">
+            <label for="username" class="text-danger">Username:</label>
+            <br>
+            <input type="text", id="username" name="username" class="form-control">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="password" class="text-danger">Password:</label>
+            <br>
+            <input type="password", id="password" name="password" class="form-control">
+        </div>
+        <div class="form-group col-md-6" id="login-row">
+            <div class="row">
+                <input type="submit", id="login" class="form-control btn btn-danger" value="submit">
+            </div>
+        </div>
+        <div class="form-group col-md-6" id="login-row">
+            <div class="row">
+                <a href="#" class="form-control btn btn-outline-danger">Register Here</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">  
     </script>
