코드 오류 수정

--- a/apis/templates/home.html
+++ b/apis/templates/home.html
@@ -1,11 +1,12 @@
 {% extends "_base.html" %}
 {% load static %}
+
 {% block title %}
 홈페이지
 {% endblock %}
 
 {% block contents %}
-<h1> login </h1>
+<h1> homepage </h1>
 {{ request.user }}
     <input type="text", id="username">
     <input type="password", id="password">
