--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,13 +1,19 @@
 #login .container {
     margin-top: 120px;
-    width: 200;
-    height: 400;
-    border: 2px solid #9c9c9c;
+    width: 600px;
+    height: 400px;
+    border: 2px solid lightcoral;
 }
 #login .container #login-row #login-column #login-box #login-form {
     padding: 20px;
-    color: blue;
 }
 #login .container #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
+}
+.register {
+    margin-top: 120px;
+    margin: 100px;
+    width: 600px;
+    height: 450px;
+    border: 3px solid lightcoral;
 }
