--- a/apis/templates/register.html
+++ b/apis/templates/register.html
@@ -12,7 +12,7 @@ register page
 {% block contents %}
 
 <div class="register">
-    <div class="col-md-12">
+    <div class="col-md-6">
         <h1 class="text-center text-danger">
             Register
         </h1>
@@ -32,13 +32,16 @@ register page
             <label for="InputPassword" class="text-danger">Password :</label>
             <input type="password" class="form-control" id="password" placeholder="Password">
         </div>
-        <button class="btn btn-danger" id="register">Register</button>
+        <button class="btn btn-danger" id="register_btn">Register</button>
+
+        <button class="btn btn-danger" id="login" onclick="location.href='{% url 'login' %}'">login</button>
+
         <!-- jquery cdn -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
         <script>
             $(document).ready(function() {
-                $('#register').click(function() {
+                $('#register_btn').click(function() {
                     $.post('/apis/v1/users/create/', {'username': $('#username').val(), 'password': $('#password').val(), 'email':$('#email').val()}, function() {
                         alert('가입을 환영합니다!');
                         window.location = {% url 'login' %};
