--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,3 +1,6 @@
+.register {
+    margin: 100px 100px;
+}
 #login .container {
     margin-top: 120px;
     width: 600px;
@@ -9,11 +12,4 @@
 }
 #login .container #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
-}
-.register {
-    margin-top: 120px;
-    margin: 100px;
-    width: 600px;
-    height: 450px;
-    border: 3px solid lightcoral;
 }
