--- a/apis/templates/login.html
+++ b/apis/templates/login.html
@@ -26,7 +26,7 @@ login page!
         </div>
         <div class="form-group col-md-6">
             <div class="row">
-                <input type="submit" id="loginbtn" class="form-control btn btn-danger" value="submit">
+                <input type="submit" id="loginbtn" class="form-control btn btn-danger" value="login">
             </div>
         </div>
         <div class="form-group col-md-6">
