--- a/apis/templates/relation.html
+++ b/apis/templates/relation.html
@@ -7,7 +7,6 @@
 
 {% block contents %}
 로그인 된 아이디: {{ request.user }}
-<button type="button" id="logout1">Logout</button>
 
 <p>사용자 찾기</p>
 <input type="text" id="searchUserName" placeholder="아이디를 입력해주세요.">
@@ -19,7 +18,7 @@
 <h2>내가 팔로우 한 사람들(followee)</h2>
 <ul class="list-group">
     {% for followee in followees %}
-    <li class="list-group-item list-group-item-info col-md-4">{{ followee }}</li>
+    <li class="list-group-item list-group-item-info col-md-4">{{ followee }} - <button class="unfollow btn btn-danger" data-user-id="{{ followee.id }}">언팔로우</button></li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -29,7 +28,7 @@
 {% if followers %}
 <ul class="list-group">
     {% for followee in followers %}
-    <li class="list-group-item list-group-item-info col-md-4">{{ followee }} - <button class="unfollow btn btn-danger" data-user-id="{{ user.id }}">언팔로우</button></li>
+    <li class="list-group-item list-group-item-info col-md-4">{{ followee }}</li>
     {% endfor %}
 </ul>
 {% endif %}
@@ -39,12 +38,23 @@
 </script>
 <script>
     $(document).ready(function () {
-        $('#logout1').click(function() {
+        $('#logout').click(function() {
             $.get('/apis/v1/users/logout/', {}, function() {
                 location.reload();
             })
         });
+        $('body').on('click', '.unfollow', function (e) {   
+            var userId = $(e.currentTarget).data('userId');
+            $.post("{% url 'apis_v1_relation_delete' %}", {id:userId},
+            function(){
+                alert('unfollow completed!!')
+                location.reload();
+            }).fail(function(data){
+                alert(data.responseJSON.message);
+            });
+        });
     });
+
 </script>
 
 
